Fixed slide menu overflow issue on iOS.

--- a/css/nav.css
+++ b/css/nav.css
@@ -24,29 +24,6 @@ nav {
     background-repeat: no-repeat;
 }
 
-.block-a {
-    height: 700px;
-    width: 100%;
-    background-color: black;
-}
-
-.block-b {
-    height: 500px;
-    width: 100%;
-    background-color: beige;
-}
-
-.block-c {
-    height: 700px;
-    width: 100%;
-    background-color: purple;
-}
-
-.block-d {
-    height: 700px;
-    width: 100%;
-    background-color: peru;
-}
 
 @media screen and (max-width: 768px) {
     .desktop-menu {
